[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets food/FreePixelFood/Assets/FreePixelFood/Sprite/Food/Bread2.png" type="Texture" id=1]
[ext_resource path="res://audio/Game Object Pick Up Sound Effect.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/Bread.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.0214, 15.6747 )

[node name="Bread" type="Area2D"]
collision_layer = 4
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.156459, 0.0989437 )
scale = Vector2( 0.0193875, 0.0226125 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0652351, -0.111362 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.342988, 0.234341 )
scale = Vector2( 2.21243, 2.16695 )

[node name="GoodFoodSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -1.0
pitch_scale = 1.2

[connection signal="body_entered" from="." to="." method="_on_Bread_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="finished" from="GoodFoodSound" to="." method="_on_GoodFoodSound_finished"]
